@@ -59,10 +59,11 @@ import prerna.om.ThreadStore;
 import prerna.sablecc2.PixelRunner;
 import prerna.sablecc2.PixelStreamUtility;
 import prerna.sablecc2.comm.PixelJobManager;
+import prerna.sablecc2.comm.PixelJobRunner;
+import prerna.sablecc2.comm.PixelJobStatus;
 import prerna.sablecc2.om.execptions.SemossPixelException;
 import prerna.tcp.PayloadStruct;
 import prerna.tcp.client.workers.NativePyEngineWorker;
-import prerna.util.Constants;
 import prerna.util.Utility;
 
 public class NativePySocketClient extends SocketClient implements Runnable, Closeable {
@@ -83,7 +84,6 @@ public class NativePySocketClient extends SocketClient implements Runnable, Clos
 	@Override
 	public void run() {
 		try (var startCtx = org.apache.logging.log4j.CloseableThreadContext.putAll(startMdc)) {
-
 			// there is 2 portions to the run
 			// one is before connect
 			// one is after. The reason this is done is to avoid an extra handler for
@@ -97,24 +97,22 @@ public class NativePySocketClient extends SocketClient implements Runnable, Clos
 					try {
 						SLEEP_TIME = Integer.parseInt(Utility.getDIHelperProperty("SLEEP_TIME"));
 					} catch (NumberFormatException e) {
-						classLogger.warn("Invalid property value for SLEEP_TIME");
-						classLogger.error(Constants.STACKTRACE, e);
+						classLogger.error("Invalid SLEEP_TIME property value: {}",
+								Utility.getDIHelperProperty("SLEEP_TIME"), e);
 					}
 				}
 
-				classLogger.info("Trying with the sleep time of " + SLEEP_TIME);
-				while (!connected && attempt < 6) // I do an attempt here too hmm..
-				{
+				classLogger.info("Trying with sleep time {}", SLEEP_TIME);
+				while (!connected && attempt < 6) {
 					try {
 						clientSocket = new Socket(this.HOST, this.PORT);
 						// pick input and output stream and start the threads
 						this.is = clientSocket.getInputStream();
 						this.os = clientSocket.getOutputStream();
 						classLogger.info("CLIENT Connection complete !!!!!!!");
+						// sleep some before executing command
+						Thread.sleep(100);
 
-						Thread.sleep(100); // sleep some before executing command
-						// prime it
-						// classLogger.info("First command.. Prime" + executeCommand("2+2"));
 						connected = true;
 						ready = true;
 						killAll = false;
@@ -123,7 +121,7 @@ public class NativePySocketClient extends SocketClient implements Runnable, Clos
 						}
 					} catch (Exception ex) {
 						attempt++;
-						classLogger.info("Attempting Number " + attempt);
+						classLogger.info("Attempting connection number {}", attempt);
 						// see if sleeping helps ?
 						try {
 							// sleeping only for 1 second here
@@ -191,21 +189,28 @@ public class NativePySocketClient extends SocketClient implements Runnable, Clos
 									ps.epoc, ps.operation, ps.response, ps.interim);
 
 							PayloadStruct lock = requestMap.get(ps.epoc);
-							classLogger.debug("incoming payload " + ps);
+							classLogger.debug("Incoming payload {}", ps);
 							classLogger.debug("Found lock for epoc {}: {}", ps.epoc, lock != null);
 
+							// cancelled operations
+							if (ps.operation == PayloadStruct.OPERATION.CANCELLED) {
+								classLogger.debug("User cancelled request for epoc: {}", ps.epoc);
+							}
 							// std out no questions
-							if (ps.operation == PayloadStruct.OPERATION.STDOUT && ps.payload != null && !ps.response) {
+							else if (ps.operation == PayloadStruct.OPERATION.STDOUT && ps.payload != null
+									&& !ps.response) {
 								String logMessage = (String) ps.payload[0];
 								if (lock != null) {
 									exposeLog(logMessage, lock.jobId);
 								}
 							}
-							// new way of handling streaming data to repalce below else if
+
 							else if (ps.operation == PayloadStruct.OPERATION.STRUCTURED_STREAM) {
 								if (ps.payload != null && ps.payload[0] != null) {
-									classLogger.debug(ps.payload[0] + "");
-									PixelJobManager.getManager().addStreamOut(lock.jobId, (Map) ps.payload[0]);
+									classLogger.debug("Structed stream: {}", ps.payload[0]);
+									if (lock != null && lock.jobId != null) {
+										PixelJobManager.getManager().addStreamOut(lock.jobId, (Map) ps.payload[0]);
+									}
 								}
 							}
 							// need some way to say this is the output from the actual python vs. something
@@ -262,7 +267,7 @@ public class NativePySocketClient extends SocketClient implements Runnable, Clos
 								final String executionInsightId = finalPs.executionInsightId;
 								Map<String, String> parentMDC = finalPs.mdc;
 								// I'm creating a new thread to run the pixel
-								new Thread(() -> {
+								Thread.ofVirtual().start(() -> {
 									try (var ctx = org.apache.logging.log4j.CloseableThreadContext.putAll(parentMDC)) {
 										classLogger.debug("Starting reactor operation for epoc: {}", finalPs.epoc);
 										ByteArrayOutputStream output = new ByteArrayOutputStream();
@@ -304,7 +309,9 @@ public class NativePySocketClient extends SocketClient implements Runnable, Clos
 											finalPs.response = true;
 											executeCommand(finalPs);
 										} catch (Exception e) {
-											classLogger.error(Constants.STACKTRACE, e);
+											classLogger.error(
+													"Error executing pixel operation in reactor thread for epoc: {}",
+													finalPs.epoc, e);
 											finalPs.response = true;
 											String errorMessage = "An error occurred running the pixel = " + pixelOp;
 											if (e.getMessage() != null) {
@@ -316,11 +323,13 @@ public class NativePySocketClient extends SocketClient implements Runnable, Clos
 											try {
 												output.close();
 											} catch (IOException e) {
-												classLogger.error(Constants.STACKTRACE, e);
+												classLogger.error(
+														"Error closing output stream in reactor thread for epoc: {}",
+														finalPs.epoc, e);
 											}
 										}
 									}
-								}).start();
+								});
 							}
 							// this is a request
 							else if (ps.operation == PayloadStruct.OPERATION.ENGINE) {
@@ -345,15 +354,14 @@ public class NativePySocketClient extends SocketClient implements Runnable, Clos
 								}
 							}
 						} else {
-							killAll = true;
-							break;
+							crash();
+							break SOCKET_LISTENER;
 						}
 					} catch (SocketException ex1) {
-						classLogger.error(Constants.STACKTRACE, ex1);
 						crash();
 						break SOCKET_LISTENER;
 					} catch (Exception ex) {
-						classLogger.error(Constants.STACKTRACE, ex);
+						classLogger.error("Unexpected error in socket listener loop", ex);
 					}
 				}
 			}
@@ -433,7 +441,7 @@ public class NativePySocketClient extends SocketClient implements Runnable, Clos
 						input.payload[classIndex] = insight;
 					}
 				} catch (ClassNotFoundException e) {
-					classLogger.error(Constants.STACKTRACE, e);
+					classLogger.error("Could not find class: {}", input.payloadClassNames[classIndex], e);
 				}
 			}
 		}
@@ -447,14 +455,51 @@ public class NativePySocketClient extends SocketClient implements Runnable, Clos
 	 * @param insightId
 	 */
 	private void exposeLog(String data, String jobId) {
-		classLogger.debug("Exposing log to jobId = '" + jobId + "' with data = " + data);
+		classLogger.debug("Exposing log to jobId = '{}' with data = {}", jobId, data);
 		if (jobId != null && data != null) {
 			PixelJobManager.getManager().addStdOut(jobId, data);
 		} else {
 			// 2025-07-08
 			// currently insights for the model py translator is not in store
-			classLogger.debug("Job Id = '" + jobId + "' is not in insight store");
+			classLogger.debug("JobId = '{}' is not in insight store", jobId);
 		}
+	}
+
+	@Override
+	public void interruptInsight(String insightId) {
+		interruptInsightJob(insightId, null);
+	}
+
+	@Override
+	public void interruptInsightJob(String insightId, String jobId) {
+		// Always cancel local waiters first.
+		super.interruptInsightJob(insightId, jobId);
+
+		if ((insightId == null || insightId.isBlank()) && (jobId == null || jobId.isBlank())) {
+			return;
+		}
+		if (!this.connected || this.killAll) {
+			return;
+		}
+
+		// Best-effort remote interrupt so the Python process can stop the currently
+		// running execution without killing the socket server process.
+		PayloadStruct ps = new PayloadStruct();
+		ps.epoc = "pi" + count.getAndIncrement();
+		ps.operation = PayloadStruct.OPERATION.INSIGHT;
+		ps.methodName = "interruptInsight";
+		ps.payload = new Object[] { "INTERRUPT_INSIGHT" };
+		ps.hasReturn = false;
+		ps.longRunning = false;
+		ps.insightId = insightId;
+		ps.executionInsightId = insightId;
+		ps.jobId = jobId;
+		writePayload(ps);
+	}
+
+	@Override
+	public void interruptInsight(String insightId, String jobId) {
+		interruptInsightJob(insightId, jobId);
 	}
 
 	@Override
@@ -479,6 +524,12 @@ public class NativePySocketClient extends SocketClient implements Runnable, Clos
 		if (ps.insightId != null) {
 			addEpocForInsight(ps.insightId, ps.epoc);
 		}
+		if (ps.executionInsightId != null && !ps.executionInsightId.equals(ps.insightId)) {
+			addEpocForInsight(ps.executionInsightId, ps.epoc);
+		}
+		if (ps.jobId != null) {
+			addEpocForJob(ps.jobId, ps.epoc);
+		}
 		ps.longRunning = true;
 
 		try {
@@ -490,7 +541,7 @@ public class NativePySocketClient extends SocketClient implements Runnable, Clos
 					this.requestMap.put(id, ps);
 				}
 				writePayload(ps);
-				classLogger.debug("outgoing payload " + ps.epoc);
+				classLogger.debug("outgoing payload {}", ps.epoc);
 
 				// send the message
 				// time to wait = average time * 10
@@ -509,7 +560,7 @@ public class NativePySocketClient extends SocketClient implements Runnable, Clos
 							if (pollNum < maxWait) {
 								ps.wait(this.averageMillis);
 							} else {
-								classLogger.debug("Im about to wait eternally for epoc{}", ps.epoc);
+								classLogger.debug("Im about to wait eternally for epoc {}", ps.epoc);
 								// wait eternally - we dont know how long some of the load operations would take
 								// besides
 								// I am not sure if the null gets us anything
@@ -517,15 +568,27 @@ public class NativePySocketClient extends SocketClient implements Runnable, Clos
 							}
 							pollNum++;
 						} catch (InterruptedException e) {
-							classLogger.error(Constants.STACKTRACE, e);
+							boolean cancelled = cancelledEpocs.contains(ps.epoc);
+							if (!cancelled && ps.jobId != null) {
+								PixelJobRunner jobRunner = PixelJobManager.getManager().getJob(ps.jobId);
+								cancelled = jobRunner != null
+										&& jobRunner.getPixelJobStatus() == PixelJobStatus.CANCELED;
+							}
+
+							if (cancelled) {
+								classLogger.debug("Interrupted due to cancel for epoc {}", ps.epoc);
+								break; // let existing cancelledEpocs/job handling throw cancel response
+							}
+
+							classLogger.warn("Interrupted while waiting for epoc {}", ps.epoc, e);
 						}
 					}
 					if (cancelledEpocs.contains(ps.epoc)) {
 						cancelledEpocs.remove(ps.epoc);
-						classLogger.info("Cancelled epoc " + ps.epoc + " " + ps.methodName);
+						classLogger.info("Cancelled epoc {} {}", ps.epoc, ps.methodName);
 						throw new SemossPixelException("The request was cancelled by the user");
 					} else if (!responseMap.containsKey(ps.epoc) && ps.hasReturn) {
-						classLogger.info("Timed out for epoc " + ps.epoc + " " + ps.methodName);
+						classLogger.info("Timed out for epoc {} {}", ps.epoc, ps.methodName);
 					}
 				}
 
@@ -533,6 +596,10 @@ public class NativePySocketClient extends SocketClient implements Runnable, Clos
 			}
 		} finally {
 			removeEpocForInsight(ps.insightId, ps.epoc);
+			if (ps.executionInsightId != null && !ps.executionInsightId.equals(ps.insightId)) {
+				removeEpocForInsight(ps.executionInsightId, ps.epoc);
+			}
+			removeEpocForJob(ps.jobId, ps.epoc);
 		}
 	}
 
@@ -541,21 +608,22 @@ public class NativePySocketClient extends SocketClient implements Runnable, Clos
 	 * @param ps
 	 */
 	private void writePayload(PayloadStruct ps) {
-		classLogger.debug("Starting writePayload for epoc: " + ps.epoc);
+		classLogger.debug("Starting writePayload for epoc: {}", ps.epoc);
 		ps.payloadClasses = null;
 		try {
 			String jsonPS = gson.toJson(ps);
 			byte[] psBytes = pack(jsonPS, ps.epoc);
 			try {
-				classLogger.debug("About to write to output stream for epoc: " + ps.epoc);
-				os.write(psBytes);
-				classLogger.debug("Successfully wrote to output stream for epoc: " + ps.epoc);
+				synchronized (WRITE_LOCK) {
+					classLogger.debug("About to write to output stream for epoc: {}", ps.epoc);
+					os.write(psBytes);
+					classLogger.debug("Successfully wrote to output stream for epoc: {}", ps.epoc);
+				}
 			} catch (IOException ex) {
-				classLogger.info("Failed writing to output stream for epoc: " + ps.epoc, ex);
-				classLogger.error(Constants.STACKTRACE, ex);
+				classLogger.error("Failed to write payload to output stream for epoc: {}", ps.epoc, ex);
 			}
 		} catch (Exception ex) {
-			classLogger.error(Constants.STACKTRACE, ex);
+			classLogger.error("Unexpected error serializing payload for epoc: {}", ps.epoc, ex);
 		}
 	}
 
@@ -595,7 +663,6 @@ public class NativePySocketClient extends SocketClient implements Runnable, Clos
 		}
 
 		return finalByte;
-
 	}
 
 	/**
@@ -633,14 +700,15 @@ public class NativePySocketClient extends SocketClient implements Runnable, Clos
 				Future<Boolean> future = executor.submit(callableTask);
 				try {
 					boolean result = future.get(5, TimeUnit.SECONDS);
-					classLogger.info("Stop socket result = " + result);
+					classLogger.info("Stop socket result = {}", result);
 					return result;
 				} catch (TimeoutException e) {
 					classLogger.warn("Not able to release the payload structs within a timely fashion");
 					future.cancel(true);
 					return false;
 				} catch (InterruptedException | ExecutionException e) {
-					classLogger.error(Constants.STACKTRACE, e);
+					Thread.currentThread().interrupt();
+					classLogger.error("Interrupted or execution failure during stop server", e);
 					return false;
 				} finally {
 					executor.shutdown();
@@ -659,28 +727,26 @@ public class NativePySocketClient extends SocketClient implements Runnable, Clos
 	 */
 	@Override
 	public void crash() {
-		// this happens when the client has completely crashed
-		// make the connected to be false
-		// take everything that is waiting on it
-		// go through request map and start pushing
+		// this happens when the client losses connection to the server
+		classLogger.warn("NativePySocketClient is disconnected from server");
 
 		// run as executor since it is synchronized
 		// and dont want to get stuck if an issue occurs and the notify never happens
 		// we will close and kill process anyway
-		ExecutorService executor = Executors.newSingleThreadExecutor();
 
+		ExecutorService executor = Executors.newSingleThreadExecutor();
 		Callable<String> callableTask = () -> {
 			try {
 				for (Object k : this.requestMap.keySet()) {
 					PayloadStruct ps = this.requestMap.get(k);
-					classLogger.debug("Releasing <" + k + "> <" + ps.methodName + ">");
-					ps.ex = "Server has crashed. This happened because you exceeded the memory limits provided or performed an illegal operation. Please relook at your recipe";
+					classLogger.debug("Releasing <{}> <{}>", k, ps.methodName);
+					ps.ex = "Client is disconnected from the server.";
 					synchronized (ps) {
 						ps.notifyAll();
 					}
 				}
 			} catch (Exception e) {
-				classLogger.error(Constants.STACKTRACE, e);
+				classLogger.error("Error releasing pending payload structs during crash", e);
 			}
 			return "Successfully released the payload structs";
 		};
@@ -694,14 +760,13 @@ public class NativePySocketClient extends SocketClient implements Runnable, Clos
 			classLogger.warn("Not able to release the payload structs within a timely fashion");
 			future.cancel(true);
 		} catch (InterruptedException | ExecutionException e) {
-			classLogger.error(Constants.STACKTRACE, e);
+			Thread.currentThread().interrupt();
+			classLogger.error("Interrupted or execution failure during crash", e);
 		} finally {
 			executor.shutdown();
 		}
 
 		this.close();
-		classLogger.fatal(
-				"Analytic engine is no longer available. This happened because you exceeded the memory limits provided or performed an illegal operation. Please relook at your recipe");
 	}
 
 }
